# sg_solver

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  board.py  conversion_utils.py  debug_piece.py  debug_placement.py  pieces.py  pyproject.toml  requirements.txt  solver.py  test_mask_from_keypoints.py  viz.py
.github/workflows/: pages.yml
app/: database.py  server.py
app/static/: index.html  style-pastel.css  style.css  translations.json
app/static/js/: api.js  board.js  camera.js  game.js  i18n.js  main.js  pieces.js
board_detection/: __init__.py  advanced_scorers.py  anchor_detector.py  anchor_helpers.py  board_pipeline.py  board_pipeline_clean.py  board_solver.py  cnns.py  color_helpers.py  graph_clustering.py  improved_search.py  link_roboflow_to_json.py  mask_helpers.py  patch_classification.py  piece_identification.py  pipeline_types.py  reference_data.py  sam_helpers.py  solver_examples.py  solver_integration.py  white_triangles.py  yolo_helpers.py
board_detection/ml/: __init__.py  config.py  datasets.py  utils.py  vis_utils.py
board_detection/ml/training/: sweep_cnn_white.py  train_cnn_white.py  train_rf_compare.py
scripts/: debug_piece.py  debug_placement.py
sg_solver/: __init__.py  board.py  conversion_utils.py  dices.py  pieces.py  solver.py  viz.py
tests/: test_api.sh
