[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sg_solver"
version = "0.1.0"
description = "Star Genius Solver"
authors = [{name = "Nicolas", email = "nicolas@example.com"}]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "numpy",
    "opencv-python-headless",
    "pillow"
]

[tool.setuptools.packages.find]
include = ["sg_solver*"]
